@@ -4,7 +4,7 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=3.1.0g
+version=Feb.04.01a
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
