@@ -1,6 +1,6 @@
 # Kismet drone config file
 
-version=3.1.0
+version=Feb.04.01a
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
