@@ -3108,7 +3108,7 @@ int DrawLegendComposite(vector<gps_network *> in_nets, Image **in_img,
 
     }
 
-    snprintf(text, 1024, "Map generated by Kismet/GPSMap %d.%d.%d - "
+    snprintf(text, 1024, "Map generated by Kismet/GPSMap %s.%s.%s - "
              "http://www.kismetwireless.net", VERSION_MAJOR, 
              VERSION_MINOR, VERSION_TINY);
     QueryColorDatabase("#999999", &textclr, &im_exception);
@@ -3400,7 +3400,7 @@ int main(int argc, char *argv[]) {
             keep_gif = true;
             break;
         case 'V':
-            printf("GPSMap v%i.%i.%i\n", VERSION_MAJOR, VERSION_MINOR, VERSION_TINY);
+            printf("GPSMap v%s.%s.%s\n", VERSION_MAJOR, VERSION_MINOR, VERSION_TINY);
             exit(0);
             break;
         case 'c':
