@@ -27,7 +27,8 @@ TcpClient::TcpClient() {
         "ssid,prototype,sourceip,destip,sourceport,destport,nbtype,"
         "nbsource";
     protocol_default_map["STRING"] = "bssid,sourcemac,text";
-    protocol_default_map["KISMET"] = "version,starttime,servername,timestamp,channelhop";
+    protocol_default_map["KISMET"] = "version,starttime,servername,timestamp,"
+        "channelhop,newversion";
     protocol_default_map["GPS"] = "lat,lon,alt,spd,heading,fix";
     protocol_default_map["NETWORK"] = "bssid,type,ssid,beaconinfo,llcpackets,datapackets,cryptpackets,"
         "weakpackets,channel,wep,firsttime,lasttime,atype,rangeip,gpsfixed,minlat,minlon,minalt,minspd,"
@@ -57,7 +58,9 @@ TcpClient::TcpClient() {
         old_num_noise = old_num_dropped = 0;
 
     start_time = 0;
-    major = minor = tiny = 0;
+    major[0] = '\0';
+    minor[0] = '\0';
+    tiny[0] = '\0';
 
     power = quality = noise = 0;
 
@@ -273,6 +276,7 @@ int TcpClient::ParseData(char *in_data) {
     char header[65];
     char bssid_str[18];
     mac_addr bssid;
+    int junkmajor, junkminor, junktiny;
 
     if (sscanf(in_data, "%64[^:]", header) < 1) {
         return 0;
@@ -287,9 +291,12 @@ int TcpClient::ParseData(char *in_data) {
         snprintf(errstr, 1024, "Server has terminated.\n");
         return -1;
     } else if (!strncmp(header, "*KISMET", 64)) {
-        if (sscanf(in_data+hdrlen, "%d.%d.%d %d \001%32[^\001]\001 %24s %d",
-                   &major, &minor, &tiny, (int *) &start_time, servername, 
-                   build, &channel_hop) < 7)
+        if (sscanf(in_data+hdrlen, "%d.%d.%d %d \001%32[^\001]\001 %24s %d "
+                   "%24[^.].%24[^.].%24s",
+                   &junkmajor, &junkminor, &junktiny, 
+                   (int *) &start_time, servername, 
+                   build, &channel_hop,
+                   &major, &minor, &tiny) < 7)
             return 0;
     } else if (!strncmp(header, "*TIME", 64)) {
         if (sscanf(in_data+hdrlen, "%d", (int *) &serv_time) < 1)
